--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Firas Ben Hmida</title>
+
+    <!-- Favicons (use RELATIVE paths so it works on GitHub Pages too) -->
+    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
+    <link rel="icon" href="favicon.svg?v=2" type="image/svg+xml" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=2" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180" />
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#0ea5e9" />
+    <meta name="theme-color" content="#0ea5e9" />
   </head>
   <body>
     <div id="root"></div>
-    <!-- Ensure you are NOT loading React/ReactDOM via CDN here -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
